# poke_data

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
generated_data/de/: metadata.json
generated_data/de/pokedle/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  134.json  (+856 more)
generated_data/de/pokeguesser/: 1.json  10.json  100.json  100_Voltobal.json  101.json  101_Lektrobal.json  102.json  102_Owei.json  103.json  103_Kokowei.json  104.json  104_Tragosso.json  105.json  105_Knogga.json  106.json  106_Kicklee.json  107.json  107_Nockchan.json  108.json  108_Schlurp.json  109.json  109_Smogon.json  10_Raupy.json  11.json  110.json  110_Smogmog.json  111.json  111_Rihorn.json  112.json  112_Rizeros.json  113.json  113_Chaneira.json  114.json  114_Tangela.json  115.json  116.json  (+1759 more)
generated_data/en/: metadata.json
generated_data/es/: metadata.json
generated_data/fr/: metadata.json
generated_data/it/: metadata.json
generated_data/ja-Hrkt/: metadata.json
generated_data/ko/: metadata.json
generated_data/zh-Hans/: metadata.json
generated_data/zh-Hant/: metadata.json
src/: Color.hpp  Language.hpp  MetaData.hpp  Pokemon.cpp  Pokemon.hpp  PokemonGenerator.cpp  PokemonGenerator.hpp  StrongTypeJsonModified.hpp  Type.hpp  main.cpp
(+23458 files in other folders)
